<resources>
    <string name="app_name">Mileage Tracker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="add_trip_info">Add Trip Info</string>
    <string name="add_item">Add Item</string>
    <string name="current_mileage">Current Mileage</string>
    <string name="trip_meter">Trip Meter</string>
    <string name="add_new_fill_up">Add New Fill Up</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="gallons">Gallons</string>
    <string name="export">Export</string>
    <string name="import_string">Import</string>
    <string name="date">Date</string>
    <string name="miles">Miles</string>
    <string name="mpg">MPG</string>
    <string name="odometer">Odometer</string>
</resources>